tests/invalid_syntax/test_missing_rparen.aphi
/*
Parser error: Missing closing parenthesis in if condition.
*/

bool cond;

procedure main {
    cond = true;
    if (cond {
        cond = false;
    } else {
        cond = true;
    }
}
